--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "easy-peasy": "^3.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-particles-js": "^3.2.1",
     "react-scripts": "3.4.1",
     "uuid": "^7.0.3"
   },
